# python_wizard

./: .gitignore  LICENSE  README.md  pyproject.toml  python_wizard  python_wizard_gui  setup.py
lpcplayer/: tables.py
pywizard/: Buffer.py  FrameDataBinaryEncoder.py  FrameOptimizer.py  GuiConversion.py  HammingWindow.py  LpcEstimator.py  OptimizationLoss.py  PitchDetector.py  PitchEstimator.py  Processor.py  QuantizedFrame.py  Reflector.py  Segmenter.py  TalkieMitigator.py  TalkieSynthesizer.py  TmsSynthesizer.py  userSettings.py
tests/: test_gui_options.py  test_lpc_estimator.py  test_lpc_export.py  test_optimizer.py  test_pitch_detector.py  test_reflector.py  test_talkie_synthesizer.py
